feat: fix ci workflow